# open-thymos

./: CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  RFC_TEMPLATE.md  ROADMAP.md  SECURITY.md  STATUS.md  VISION.md  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: nightly.yml  release.yml  rust.yml
docs/: CNAME  _config.yml  api-reference.md  architecture.md  benchmarks.md  capability-writs.md  coding-agent.md  desktop-ux-philosophy.md  deterministic-execution.md  diagrams.md  execution-ledger.md  faq.md  getting-started.md  governance.md  index.md  interfaces.md  openapi.yaml  package-distribution.md  programmable-capabilities.md  provider-abstraction.md  providers.md  replay.md  roadmap.md  runtime-invariants.md  secure-tool-fabric.md  specification.md  threat-model.md  using-cli-and-desktop.md
docs/_includes/: footer.html  head.html  nav.html
docs/_layouts/: default.html
docs/assets/css/: site.css
docs/assets/js/: hero3d.js
docs/audits/: agent-control-audit.md
docs/demos/: delegation-lineage.md  deterministic-replay.md  policy-intercept-approval.md  skill-narrowing.md
docs/integrations/: wisepick.md
docs/philosophy/: why-agent-frameworks-break.md
docs/rfcs/: compensation-saga-v1.md  desktop-app.md  enterprise-and-monetization.md  incremental-projection-cache.md  ledger-backend-trait-v1.md  mind-cognitive-graph.md  policy-language-v1.md  proposal-contract-v1.md  runtime-ledger-trait-v1.md  skill-distribution.md  skills.md  ui-surfaces-and-programmability.md  user-extensibility.md
packaging/homebrew/: README.md  thymos.rb
scripts/: check-docs.mjs  doctor.mjs  get.sh  install.sh  quickstart.sh
src/app/: globals.css  layout.tsx
src/app/runs/: page.tsx
src/components/branding/: ThymosLogo.tsx
src/components/marketing/: ThymosLanding.tsx
src/components/trajectory/: RunViewer.tsx
src/lib/: site.ts
thymos/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
thymos/clients/desktop/: .gitignore  README.md  package-lock.json  package.json
thymos/clients/desktop/scripts/: prepare-sidecar.mjs  smoke.mjs
thymos/clients/desktop/src/: index.html  main.js  styles.css  viz.js
thymos/clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
thymos/clients/desktop/src-tauri/icons/: README.md  icon.icns
thymos/clients/desktop/src-tauri/src/: lib.rs  main.rs
thymos/crates/thymos-cli/: Cargo.toml  build.rs
thymos/crates/thymos-cli/src/: main.rs  shell.rs
thymos/crates/thymos-cli/tests/: e2e.rs
thymos/crates/thymos-cognition/src/: anthropic.rs  lib.rs  mock.rs  openai.rs  presets.rs
thymos/crates/thymos-cognition/tests/: adapter_http.rs  migration_4_7.rs
thymos/crates/thymos-compiler/src/: lib.rs
thymos/crates/thymos-core/src/: commit.rs  crypto.rs  ids.rs  lib.rs  proposal.rs  redact.rs  skill.rs  writ.rs
thymos/crates/thymos-ledger/src/: anchor.rs  lib.rs  postgres.rs  replay.rs  sqlite.rs
thymos/crates/thymos-ledger/tests/: postgres_integration.rs
thymos/crates/thymos-marketplace/src/: lib.rs
thymos/crates/thymos-policy/src/: json_policy.rs  lib.rs
thymos/crates/thymos-runtime/examples/: delegation_lineage.rs  hello_llm_triad.rs  hello_triad.rs  skill_narrowing.rs
thymos/crates/thymos-runtime/src/: agent.rs  agent_async.rs  feedback.rs  lib.rs
thymos/crates/thymos-runtime/tests/: agent_loop.rs  clock.rs  cognition_budget.rs  compensation.rs  compensation_gate.rs  compiler_rejection.rs  cross_trajectory_compensation.rs  delegation.rs  feedback.rs  idempotency.rs  json_policy_e2e.rs  live_provider.rs  quorum.rs  redaction.rs  replay_safety.rs  revocation.rs  risk_gate.rs  routing_evidence.rs
thymos/crates/thymos-server/: Cargo.toml
thymos/crates/thymos-server/src/: audit.rs  execution.rs  lib.rs  main.rs  middleware.rs  run_store.rs  skills.rs
thymos/crates/thymos-server/tests/: auth_e2e.rs  capabilities.rs  e2e.rs
thymos/crates/thymos-tools/src/: coding.rs  lib.rs
thymos/crates/thymos-tools/tests/: manifest_tools.rs
thymos/crates/thymos-worker/src/: main.rs
wiki/: API-Overview.md  Architecture.md  FAQ.md  Getting-Started.md  Home.md  Interfaces.md
