[package]
name = "thymos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Thymos CLI: create runs, stream output, manage marketplace, inspect ledger."

[[bin]]
name = "thymos"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thymos-cognition = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
dotenvy = { workspace = true }
rustyline = "14"
shlex = "1"
similar = "2"

[dev-dependencies]
axum = { workspace = true }
thymos-server = { path = "../thymos-server" }
thymos-marketplace = { path = "../thymos-marketplace" }
