# Standalone workspace: an empty [workspace] table makes this crate its own
# workspace root so it is NOT pulled into ../../Cargo.toml (the runtime
# workspace). `cargo build --workspace` in thymos/ never compiles Tauri.
[workspace]

[package]
name = "thymos-desktop"
version = "0.8.1"
edition = "2021"
license = "Apache-2.0"
description = "OpenThymos Desktop — a governed-cognition client that supervises a local runtime."

[lib]
name = "thymos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Light blocking HTTP client for host-side model discovery + connection tests
# (the webview's CSP can't reach provider URLs; the host does it locally).
ureq = { version = "2", features = ["json", "tls"] }
# Native folder picker for the agent's working directory (no JS plugin needed).
rfd = "0.15"

[features]
# Tauri custom protocol assets in production builds.
custom-protocol = ["tauri/custom-protocol"]
